--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
